--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 5vw;
+  background-color: white;
 }
 .title{
   margin: .25em;
