Big Commit: A bunch of imgages and adjustments on the contact form

--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,5 +1,5 @@
 .hero-container{
-  background-image: url(https://scontent.fosu2-2.fna.fbcdn.net/v/t39.30808-6/239844746_111625384557842_8306683179280402449_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=Lin-gZsq1LYQ7kNvgEmpiMx&_nc_ht=scontent.fosu2-2.fna&oh=00_AYBW5C7MnQ0Qe9rv9-2kB-fjQhydOJCW79LTmgcLKC2bOA&oe=669795EC);
+  background-image: url(../assets/images/general/HeroImage.jpg);
   background-size: 100%;;
   background-repeat: no-repeat;
   background-position: center;
