--- a/client/src/css/ContactForm.css
+++ b/client/src/css/ContactForm.css
@@ -38,3 +38,10 @@
     transition: 100ms;
 }
 
+@media only screen and (max-width:700px) {
+  .contact-form-container {
+      width: 70vw;
+      margin-top: 1em
+  }
+
+}
